--- a/bloco_3/dia_3/style.css
+++ b/bloco_3/dia_3/style.css
@@ -13,12 +13,50 @@
 
   .padding {
   /* insira aqui um padding de 20px na classe abaixo para aplicá-lo aos itens B, C e D */
+    padding: 20px;
   }
 
   .margin {
   /* insira aqui uma margem de 30px na classe abaixo para aplicá-la aos itens C e D */
+    margin: 30px;
   }
 
   .border {
   /* insira aqui uma borda com valor '5px solid black' para aplicá-la ao item D */
+    border: 5px solid black;
+  }
+
+  .super-mario{
+    position:absolute;
+    width: 200px;
+    bottom: 20px;
+    left: 200px;
+    bottom: 150px;
+  }
+
+  .goomba{
+    position: absolute;
+    width: 150px;
+    bottom: 20px;
+    left: 400px;
+  }
+
+  .word{
+    position: absolute;
+    z-index: 1;
+    left: 30px;
+  }
+
+  .baloon{
+    position: absolute;
+    width: 200px;
+    top: 150px;
+    left: 10px;
+  }
+
+  .bowser{
+    position: absolute;
+    width: 300px;
+    right: 200px;
+    bottom: 20px;
   }
