--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/style.css
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
 body {
     text-align: center;
     display: inline-block;
-    margin: 0 10%;
+    margin: auto 7%;
     font-family: Raleway, sans-serif;
 }
 
@@ -12,6 +12,22 @@ h1{
     color: #fff;
     background-color: #0c0c0c;
     display: inline;
+}
+
+h2 {
+    font-size: xx-large;
+}
+
+h3 {
+    text-align: justify;
+    font-size: x-large;
+}
+
+p {
+    text-align: justify;
+    font-size: larger;
+    font-weight: 300;
+    letter-spacing: .5px;
 }
 
 a {
