--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/style.css
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/style.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 h3 {
-    text-align: justify;
+    text-align: left;
     font-size: x-large;
 }
 
@@ -28,6 +28,7 @@ p {
     font-size: larger;
     font-weight: 300;
     letter-spacing: .5px;
+    display: inline-block;
 }
 
 a {
@@ -51,4 +52,10 @@ li{
     display: inline-block;
     width: 15%;
     margin: auto 15px;
+}
+
+table, .table-title {
+    text-align: left;
+    margin-left: 75%;
+    display: inline-block;
 }
