estiliza background da pagina

--- a/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/style.css
+++ b/exercises/bloco_3/dia_3/dia_3.1/ConteudoAulaPt3/style.css
@@ -6,6 +6,7 @@ body {
     margin: auto 7%;
     font-family: Raleway, sans-serif;
     background-color: #F8E7C9;
+    background-image: linear-gradient(#F8E7C9, #FDF7ED, #FAEFDB);
 }
 
 h1{
