--- a/exercises/bloco_12/dia_2/conteudo-aula/src/index.css
+++ b/exercises/bloco_12/dia_2/conteudo-aula/src/index.css
@@ -5,9 +5,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  text-align: center;
+}
+
+label {
+  font-weight: 500;
+}
+* {
+  padding: 8px;
+}
+
+.formCompl {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+}
+
+.formCompl .labelCompl, .selectRegiao {
+  display: flex;
 }
